View Issue Details [ Jump to Notes ] [ Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0015272CMakeCMakepublic2014-12-01 05:232016-06-10 14:31
ReporterJan Rüegg 
Assigned ToKitware Robot 
PrioritynormalSeverityminorReproducibilityalways
StatusclosedResolutionmoved 
PlatformOSOS XOS Version10.9
Product VersionCMake 3.0.2 
Target VersionFixed in Version 
Summary0015272: “File reference” warnings when building a CMake project with resources in Xcode 6
DescriptionNot all the warnings from http://public.kitware.com/Bug/view.php?id=15111 [^] are fixed in CMake 3.0.2.

For example, when adding a storyboard, you have to add it to the resources, and to the executable to make it work:

add_executable(foo MACOSX_BUNDLE ${SOURCES} main.storyboard)
set_target_properties(foo PROPERTIES RESOURCE main.storyboard)

This adds two references, and the warning is back:

2014-12-01 10:43:54.083 xcodebuild[44408:1007] warning: The file reference for "main.storyboard" is a member of multiple groups ("foo" and "Resources"); this indicates a malformed project. Only the membership in one of the groups will be preserved (but membership in targets will be unaffected). If you want a reference to the same file in more than one group, please add another reference to the same path.


TagsNo tags attached.
Attached Files

 Relationships
related to 0015111closedBrad King “File reference” warnings when building a CMake project with Xcode 6 

  Notes
(0037329)
Brad King (manager)
2014-12-01 11:22

This is distinct from 0015111 in that now the two references are in the same target rather than different targets.

It looks like CreateXCodeFileReferenceFromPath may need an additional parameter to distinguish multiple calling contexts further. Unfortunately I have no time to investigate the case further myself right now.
(0042677)
Kitware Robot (administrator)
2016-06-10 14:29

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2014-12-01 05:23 Jan Rüegg New Issue
2014-12-01 11:16 Brad King Relationship added related to 0015111
2014-12-01 11:22 Brad King Note Added: 0037329
2016-06-10 14:29 Kitware Robot Note Added: 0042677
2016-06-10 14:29 Kitware Robot Status new => resolved
2016-06-10 14:29 Kitware Robot Resolution open => moved
2016-06-10 14:29 Kitware Robot Assigned To => Kitware Robot
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team